# Quick-GPT

./: .gitignore  README.md  pyproject.toml
quick_gpt/: config.py  history.py  main.py  quick_gpt.py  response.py  utils.py
quick_gpt/llm/: config.json  mcp_tool_integrate.py  utils.py
quick_gpt/llm/agent/: base_chat.py  client_chat.py  memory.py
quick_gpt/llm/tools/: README.md  web_search.py
quick_gpt/utils/: log.py
